<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/questions"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/question1A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1684" />

            <RadioButton
                android:id="@+id/question1B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1764" />

            <RadioButton
                android:id="@+id/question1C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1879" />

            <RadioButton
                android:id="@+id/question1D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1904" />
        </RadioGroup>

        <TextView
            style="@style/questions"
            android:text="@string/question2" />

        <RadioGroup
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/question2A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/question2B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />

        </RadioGroup>

        <TextView
            style="@style/questions"
            android:text="@string/question3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/freud" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/jung" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question3A"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/question3B"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </RadioGroup>

        <TextView
            style="@style/questions"
            android:text="@string/question4" />

        <EditText
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question4_hint"
            android:inputType="number" />

        <TextView
            style="@style/questions"
            android:text="@string/question5" />

        <CheckBox
            android:id="@+id/question5_checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viktor" />

        <CheckBox
            android:id="@+id/question5_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/john" />

        <CheckBox
            android:id="@+id/question5_checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kurt" />

        <CheckBox
            android:id="@+id/question5_checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eric" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:onClick="submit"
            android:text="@string/button" />

    </LinearLayout>

</ScrollView>
