<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_answers"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.quizapp.Answers">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                style="@style/score_text"
                android:text="@string/score_text" />

            <TextView
                android:id="@+id/score"
                style="@style/your_score"
                android:text="0" />

            <TextView
                style="@style/score_from"
                android:text="/ 5" />
        </LinearLayout>


        <TextView
            style="@style/questions"
            android:text="@string/answer1" />

        <TextView
            style="@style/questions"
            android:text="@string/answer2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#3F51B5"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/freud" />

            <TextView
                style="@style/answer3_text"
                android:text="@string/answer3" />

        </LinearLayout>

        <TextView
            style="@style/questions"
            android:text="@string/answer4" />

        <TextView
            style="@style/questions"
            android:text="@string/answer5" />

    </LinearLayout>
</ScrollView>
